# fractal_image_generator

./: .gitignore  .travis.yml  Bitmap.cpp  Bitmap.h  BitmapFileHeader.h  BitmapInfoHeader.h  CMakeLists.txt  FractalCreator.cpp  FractalCreator.h  Mandelbrot.cpp  Mandelbrot.h  README.md  RGB.cpp  RGB.h  Zoom.cpp  Zoom.h  ZoomList.cpp  ZoomList.h  main.cpp
